syntax = "proto3";

package main;


option go_package = "Freenove_4WD_GO_Backend/dist/proto";


service Camera {
  rpc StreamCamera (FramesPerSecond) returns (stream CameraStream) {}
}

message FramesPerSecond {
  int32 FPS = 1; // 30 recommended
}

message CameraStream {
  bytes frame = 1;
}
